--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -81,6 +81,7 @@
 @import "component.plan-features";
 @import "component.profile-message";
 @import "component.infobox";
+@import "component.infobox-form";
 
 
 //Classifieds
