--- a/static/sass/pages/myaccount/_component.infobox.scss
+++ b/static/sass/pages/myaccount/_component.infobox.scss
@@ -1,4 +1,5 @@
 .infoBox {
+  
     &__head {
       display: flex;
       flex-direction: column;
@@ -125,8 +126,8 @@
 
     @include responsive(xs) {
       @include respond-to(md) {
-        .cus_acnt__infoBox {
-          &-head {
+        .infoBox {
+          &__head {
             flex-direction: row;
             justify-content: space-between;
           }
