--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -135,8 +135,8 @@
 
                                             {# SUBMIT #}
                                             <div class="infoBox-form__group infoBox-form__btns">
-                                                <button type="submit" id="" class="js-cus_acnt__HideForm cus_acnt__btn cus_acnt__btn--solid" name="">Save changes</button>
-                                                <a href="javascript:;" id="" class="js-cus_acnt__HideForm cus_acnt__btn cus_acnt__btn--bordered" name="">Cancel</a>
+                                                <button type="submit" id="" class="js-cus_acnt__HideForm cus_acnt__btn cus_acnt__btn--solid infoBox-form__button" name="">Save changes</button>
+                                                <a href="javascript:;" id="" class="js-cus_acnt__HideForm cus_acnt__btn cus_acnt__btn--bordered infoBox-form__button" name="">Cancel</a>
                                             </div>
                                         </form>
                                     </div>
