--- a/static/sass/pages/myaccount/_component.plan-table.scss
+++ b/static/sass/pages/myaccount/_component.plan-table.scss
@@ -1,7 +1,10 @@
 .plan-table {
 	margin-bottom: 80px;
+	
 	&__table {
 	  min-width: 800px;
+	  width:100%;
+
 	}
 	&__row {
 		border-bottom: 8px solid white;
