--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -331,9 +331,9 @@
                 {#           LIST OF PLANS            #}
                 {# ---------------------------------- #}
                 <div class="acme-col-12 acme-col-lg-12 acme-col-xl-10 acme-col-xxl-8 acme-offset-xl-1 acme-offset-xxl-2">
-                    <div class="cus_acnt__user-head">
-                        <div class="cus_acnt__user-head--label">Choose a plan</div>
-                        <div class="cus_acnt__user-head--sub-text">You will be asked to confirm before purchasing. </div>
+                    <div class="plan-table__user-head">
+                        <div class="plan-table__user-head-label">Choose a plan</div>
+                        <div class="plan-table__user-head-sub-text">You will be asked to confirm before purchasing. </div>
                     </div>
 
                     <div class="plan-table js-tableView" id="currentPlanStats"
@@ -391,7 +391,9 @@
                                             <td class="plan-table__col">
                                                 <span class="plan-table__price">
                                                 {{plan.currency|replace({"AUD": "$", "NZD": "$", "GBP": "£", "USD": "$", "EUR": "€"})}}{{planCost|number_format(2, '.', ',')}}
-                                                                /{{planPeriodCount}}{{planPeriod}}</span>
+                                                {% if plan.type != 'article' %}                
+                                                    /&nbsp;{{planPeriodCount}}{{planPeriod}}</span>
+                                                {% endif %}
                                             </td>
                                             {% else %}
                                             <td class="plan-table__col">
@@ -451,41 +453,39 @@
                         {# ---------------------------------- #}
 
                         {% if pwstats['type'] == 'time' and totalPlanUserCount > 0 %}
-                            <div class="acme-container">
+                            {# <div class="acme-container"> #}
                                 <div class="acme-row">
-                                    <div class="acme-col-12 acme-col-lg-8 mx-auto">
-                                        <div class="cus_acnt__user-head">
-                                            <div class="cus_acnt__user-head--label">My users</div>
-                                            <div class="cus_acnt__user-head--sub-text">You can add, search and remove users below.</div>
+                                    <div class="acme-col-12  ">
+                                        <div class="plan-table__user-head">
+                                            <div class="plan-table__user-head-label">My users</div>
+                                            <div class="plan-table__user-head-sub-text">You can add, search and remove users below.</div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            {# </div> #}
 
-                            <div class="cus_acnt__user__allotment-container cus_acnt__user__allotment-container-xs">
+                            <div class="managed-users">
                                 <div class="acme-container">
                                     <div class="acme-row">
-                                        <div class="acme-col-12 acme-col-lg-8 mx-auto">
+                                        <div class="acme-col-12 ">
                                             {% set usersLeft = totalPlanUserCount > 0 ? totalPlanUserCount -1 : totalPlanUserCount %}
-                                            <div class="cus_acnt__user__addition">
+                                            <div class="managed-users__addition">
 
                                                 {% set addUserClass = "" %}
                                                 {% if managedUserCount >= totalPlanUserCount %}
                                                     {% set addUserClass = "u-hide" %}
                                                 {% endif %}
 
-                                                <aside class="cus_acnt__user__addition-btn  ">
-                                                    <a id="addManagedUser" href="javascript:;" class="cus_acnt__btn cus_acnt__btn__bordered js-addUserButton {{addUserClass}}">Add user</a>
-                                                </aside>
-                                                <aside class="cus_acnt__user__allot-wrap">
-                                                    <span class="cus_acnt__user__allot-wrap--image">
-                                                        <img src="{{networkData.templatePath}}/static/icons/user_icon.png" alt="user" class="img-fluid" />
-                                                    </span>
-                                                    <span class="cus_acnt__user__allot-wrap--text">Allocated users:</span>
-                                                    <span class="cus_acnt__user__allot-wrap--text strong js-usercount">{{managedUserCount}} of {{totalPlanUserCount}}</span>
-                                                </aside>
+                                                <div class="managed-users__addition-btn  ">
+                                                    <a id="addManagedUser" href="javascript:;" class="cus_acnt__btn cus_acnt__btn--bordered js-addUserButton {{addUserClass}}">Add user</a>
+                                                </div>
+                                                <div class="managed-users__allot-wrap">
+                                                    <img src="{{networkData.templatePath}}/static/icons/user_icon.png" alt="user" class="img-fluid managed-users__allot-wrap--image" />
+                                                    <p class="managed-users__allot-wrap--text">Allocated users:</p>
+                                                    <p class="managed-users__allot-wrap--text strong js-usercount">{{managedUserCount}} of {{totalPlanUserCount}}</p>
+                                                </div>
                                             </div>
-                                            <div class="cus_acnt__user__addSec">
+                                            <div class="managed-users__addSec">
                                                 <div id="createManagedUser"></div>
                                             </div>
                                         </div>
